if (LIBRETRO_STATIC)
  set(LIBRETRO_TYPE STATIC)
else()
  set(LIBRETRO_TYPE SHARED)
endif()
add_library(thepowdertoy_libretro ${LIBRETRO_TYPE}
        client/Client.cpp
        client/Client.h
        client/ClientListener.h
        client/Download.cpp
        client/Download.h
        client/DownloadManager.cpp
        client/DownloadManager.h
        client/GameSave.cpp
        client/GameSave.h
        client/HTTP.cpp
        client/HTTP.h
        client/MD5.cpp
        client/MD5.h
        client/requestbroker/APIRequest.cpp
        client/requestbroker/APIRequest.h
        client/requestbroker/APIResultParser.h
        client/requestbroker/ImageRequest.cpp
        client/requestbroker/ImageRequest.h
        client/requestbroker/RequestBroker.cpp
        client/requestbroker/RequestBroker.h
        client/requestbroker/RequestListener.h
        client/requestbroker/ThumbRenderRequest.cpp
        client/requestbroker/ThumbRenderRequest.h
        client/requestbroker/WebRequest.cpp
        client/requestbroker/WebRequest.h
        client/SaveFile.cpp
        client/SaveFile.h
        client/SaveInfo.cpp
        client/SaveInfo.h
        client/User.h
        client/UserInfo.h

        common/Singleton.h
        common/tpt-compat.h
        common/tpt-inline.h
        common/tpt-minmax.h
        common/tpt-thread.h

        debug/DebugInfo.h
        debug/DebugLines.cpp
        debug/DebugLines.h
        debug/DebugParts.cpp
        debug/DebugParts.h
        debug/ElementPopulation.cpp
        debug/ElementPopulation.h
        debug/ParticleDebug.cpp
        debug/ParticleDebug.h

        graphics/DrawMethodsDef.inc
        graphics/Graphics.cpp
        graphics/Graphics.h
        graphics/Icons.h
        graphics/OpenGLDrawMethods.inl
        graphics/OpenGLGraphics.cpp
        graphics/OpenGLHeaders.h
        graphics/Pixel.h
        graphics/RasterDrawMethods.inl
        graphics/RasterGraphics.cpp
        graphics/Renderer.cpp
        graphics/Renderer.h

        gui/colourpicker/ColourPickerActivity.cpp
        gui/colourpicker/ColourPickerActivity.h
        gui/console/ConsoleCommand.h
        gui/console/ConsoleController.cpp
        gui/console/ConsoleController.h
        gui/console/ConsoleModel.cpp
        gui/console/ConsoleModel.h
        gui/console/ConsoleView.cpp
        gui/console/ConsoleView.h
        gui/dialogues/ConfirmPrompt.cpp
        gui/dialogues/ConfirmPrompt.h
        gui/dialogues/ErrorMessage.cpp
        gui/dialogues/ErrorMessage.h
        gui/dialogues/InformationMessage.cpp
        gui/dialogues/InformationMessage.h
        gui/dialogues/LegacyDialogues.h
        gui/dialogues/SaveIDMessage.cpp
        gui/dialogues/SaveIDMessage.h
        gui/dialogues/TextPrompt.cpp
        gui/dialogues/TextPrompt.h
        gui/elementsearch/ElementSearchActivity.cpp
        gui/elementsearch/ElementSearchActivity.h
        gui/filebrowser/FileBrowserActivity.cpp
        gui/filebrowser/FileBrowserActivity.h
        gui/game/BitmapBrush.h
        gui/game/Brush.cpp
        gui/game/Brush.h
        gui/game/DecorationTool.h
        gui/game/EllipseBrush.h
        gui/game/Favorite.cpp
        gui/game/Favorite.h
        gui/game/GameController.cpp
        gui/game/GameController.h
        gui/game/GameModel.cpp
        gui/game/GameModel.h
        gui/game/GameModelException.h
        gui/game/GameView.cpp
        gui/game/GameView.h
        gui/game/Menu.h
        gui/game/Notification.h
        gui/game/PropertyTool.cpp
        gui/game/QuickOption.h
        gui/game/QuickOptions.h
        gui/game/RenderPreset.h
        gui/game/SampleTool.cpp
        gui/game/SignTool.cpp
        gui/game/Tool.cpp
        gui/game/Tool.h
        gui/game/ToolButton.cpp
        gui/game/ToolButton.h
        gui/game/TriangleBrush.h
        gui/interface/Appearance.cpp
        gui/interface/Appearance.h
        gui/interface/AvatarButton.cpp
        gui/interface/AvatarButton.h
        gui/interface/Border.h
        gui/interface/Button.cpp
        gui/interface/Button.h
        gui/interface/Checkbox.cpp
        gui/interface/Checkbox.h
        gui/interface/Colour.h
        gui/interface/Component.cpp
        gui/interface/Component.h
        gui/interface/ContextMenu.cpp
        gui/interface/ContextMenu.h
        gui/interface/CopyTextButton.cpp
        gui/interface/CopyTextButton.h
        gui/interface/DropDown.cpp
        gui/interface/DropDown.h
        gui/interface/Engine.cpp
        gui/interface/Engine.h
        gui/interface/Keys.h
        gui/interface/Label.cpp
        gui/interface/Label.h
        gui/interface/Mouse.h
        gui/interface/Panel.cpp
        gui/interface/Panel.h
        gui/interface/Point.h
        gui/interface/ProgressBar.cpp
        gui/interface/ProgressBar.h
        gui/interface/RichLabel.cpp
        gui/interface/RichLabel.h
        gui/interface/SaveButton.cpp
        gui/interface/SaveButton.h
        gui/interface/ScrollPanel.cpp
        gui/interface/ScrollPanel.h
        gui/interface/Slider.cpp
        gui/interface/Slider.h
        gui/interface/Spinner.cpp
        gui/interface/Spinner.h
        gui/interface/Textbox.cpp
        gui/interface/Textbox.h
        gui/interface/Window.cpp
        gui/interface/Window.h
        gui/localbrowser/LocalBrowserController.cpp
        gui/localbrowser/LocalBrowserController.h
        gui/localbrowser/LocalBrowserModel.cpp
        gui/localbrowser/LocalBrowserModel.h
        gui/localbrowser/LocalBrowserModelException.h
        gui/localbrowser/LocalBrowserView.cpp
        gui/localbrowser/LocalBrowserView.h
        gui/login/LoginController.cpp
        gui/login/LoginController.h
        gui/login/LoginModel.cpp
        gui/login/LoginModel.h
        gui/login/LoginView.cpp
        gui/login/LoginView.h
        gui/options/OptionsController.cpp
        gui/options/OptionsController.h
        gui/options/OptionsModel.cpp
        gui/options/OptionsModel.h
        gui/options/OptionsView.cpp
        gui/options/OptionsView.h
        gui/preview/Comment.h
        gui/preview/PreviewController.cpp
        gui/preview/PreviewController.h
        gui/preview/PreviewModel.cpp
        gui/preview/PreviewModel.h
        gui/preview/PreviewModelException.h
        gui/preview/PreviewView.cpp
        gui/preview/PreviewView.h
        gui/profile/ProfileActivity.cpp
        gui/profile/ProfileActivity.h
        gui/render/RenderController.cpp
        gui/render/RenderController.h
        gui/render/RenderModel.cpp
        gui/render/RenderModel.h
        gui/render/RenderView.cpp
        gui/render/RenderView.h
        gui/save/LocalSaveActivity.cpp
        gui/save/LocalSaveActivity.h
        gui/save/ServerSaveActivity.cpp
        gui/save/ServerSaveActivity.h
        gui/search/SearchController.cpp
        gui/search/SearchController.h
        gui/search/SearchModel.cpp
        gui/search/SearchModel.h
        gui/search/SearchView.cpp
        gui/search/SearchView.h
        gui/search/Thumbnail.cpp
        gui/search/Thumbnail.h
        gui/Style.cpp
        gui/Style.h
        gui/tags/TagsController.cpp
        gui/tags/TagsController.h
        gui/tags/TagsModel.cpp
        gui/tags/TagsModel.h
        gui/tags/TagsModelException.h
        gui/tags/TagsView.cpp
        gui/tags/TagsView.h

        json/json-forwards.h
        json/json.h
        json/jsoncpp.cpp

        lua/CommandInterface.cpp
        lua/CommandInterface.h
        lua/LegacyLuaAPI.cpp
        lua/LuaBit.cpp
        lua/LuaBit.h
        lua/LuaButton.cpp
        lua/LuaButton.h
        lua/LuaCheckbox.cpp
        lua/LuaCheckbox.h
        lua/LuaCompat.c
        lua/LuaCompat.h
        lua/LuaComponent.cpp
        lua/LuaComponent.h
        lua/LuaLabel.cpp
        lua/LuaLabel.h
        lua/LuaLuna.h
        lua/LuaProgressBar.cpp
        lua/LuaProgressBar.h
        lua/LuaScriptHelper.h
        lua/LuaScriptInterface.cpp
        lua/LuaScriptInterface.h
        lua/LuaSlider.cpp
        lua/LuaSlider.h
        lua/LuaTextbox.cpp
        lua/LuaTextbox.h
        lua/LuaWindow.cpp
        lua/LuaWindow.h
        lua/socket/auxiliar.c
        lua/socket/auxiliar.h
        lua/socket/buffer.c
        lua/socket/buffer.h
        lua/socket/except.c
        lua/socket/except.h
        lua/socket/inet.c
        lua/socket/inet.h
        lua/socket/io.c
        lua/socket/io.h
        lua/socket/luasocket.c
        lua/socket/luasocket.h
        lua/socket/options.c
        lua/socket/options.h
        lua/socket/select.c
        lua/socket/select.h
        lua/socket/socket.h
        lua/socket/socket.lua
        lua/socket/socket.lua.cpp
        lua/socket/socket.lua.h
        lua/socket/tcp.c
        lua/socket/tcp.h
        lua/socket/timeout.c
        lua/socket/timeout.h
        lua/socket/udp.c
        lua/socket/udp.h
        lua/socket/unix.c
        lua/socket/unix.h
        lua/socket/usocket.c
        lua/socket/usocket.h
        lua/socket/wsocket.c
        lua/socket/wsocket.h
        lua/TPTScriptInterface.cpp
        lua/TPTScriptInterface.h
        lua/TPTSTypes.cpp
        lua/TPTSTypes.h

        resampler/resampler.cpp
        resampler/resampler.h

        simulation/Air.cpp
        simulation/Air.h
        simulation/CoordStack.h
        simulation/Element.h
        simulation/ElementGraphics.h
        simulation/elements/116.cpp
        simulation/elements/146.cpp
        simulation/elements/ACEL.cpp
        simulation/elements/ACID.cpp
        simulation/elements/AMTR.cpp
        simulation/elements/ANAR.cpp
        simulation/elements/ARAY.cpp
        simulation/elements/BANG.cpp
        simulation/elements/BCLN.cpp
        simulation/elements/BCOL.cpp
        simulation/elements/BGLA.cpp
        simulation/elements/BHOL.cpp
        simulation/elements/BIZR.cpp
        simulation/elements/BIZRG.cpp
        simulation/elements/BIZRS.cpp
        simulation/elements/BMTL.cpp
        simulation/elements/BOMB.cpp
        simulation/elements/BOYL.cpp
        simulation/elements/BRAY.cpp
        simulation/elements/BRCK.cpp
        simulation/elements/BREC.cpp
        simulation/elements/BRMT.cpp
        simulation/elements/BTRY.cpp
        simulation/elements/BVBR.cpp
        simulation/elements/C5.cpp
        simulation/elements/CAUS.cpp
        simulation/elements/CBNW.cpp
        simulation/elements/CFLM.cpp
        simulation/elements/CLNE.cpp
        simulation/elements/CLST.cpp
        simulation/elements/CNCT.cpp
        simulation/elements/CO2.cpp
        simulation/elements/COAL.cpp
        simulation/elements/CONV.cpp
        simulation/elements/CRAY.cpp
        simulation/elements/CRMC.cpp
        simulation/elements/DCEL.cpp
        simulation/elements/DESL.cpp
        simulation/elements/DEST.cpp
        simulation/elements/DEUT.cpp
        simulation/elements/DLAY.cpp
        simulation/elements/DMG.cpp
        simulation/elements/DMND.cpp
        simulation/elements/DRAY.cpp
        simulation/elements/DRIC.cpp
        simulation/elements/DSTW.cpp
        simulation/elements/DTEC.cpp
        simulation/elements/DUST.cpp
        simulation/elements/DYST.cpp
        simulation/elements/ELEC.cpp
        simulation/elements/Element.cpp
        simulation/elements/Element.h
        simulation/elements/EMBR.cpp
        simulation/elements/EMP.cpp
        simulation/elements/ETRD.cpp
        simulation/elements/EXOT.cpp
        simulation/elements/FIGH.cpp
        simulation/elements/FILT.cpp
        simulation/elements/FIRE.cpp
        simulation/elements/FIRW.cpp
        simulation/elements/FOG.cpp
        simulation/elements/FRAY.cpp
        simulation/elements/FRME.cpp
        simulation/elements/FRZW.cpp
        simulation/elements/FRZZ.cpp
        simulation/elements/FSEP.cpp
        simulation/elements/FUSE.cpp
        simulation/elements/FWRK.cpp
        simulation/elements/GAS.cpp
        simulation/elements/GBMB.cpp
        simulation/elements/GEL.cpp
        simulation/elements/GLAS.cpp
        simulation/elements/GLOW.cpp
        simulation/elements/GOLD.cpp
        simulation/elements/GOO.cpp
        simulation/elements/GPMP.cpp
        simulation/elements/GRAV.cpp
        simulation/elements/GRVT.cpp
        simulation/elements/GUNP.cpp
        simulation/elements/H2.cpp
        simulation/elements/HEAC.cpp
        simulation/elements/HSWC.cpp
        simulation/elements/ICEI.cpp
        simulation/elements/IGNT.cpp
        simulation/elements/INSL.cpp
        simulation/elements/INST.cpp
        simulation/elements/INVIS.cpp
        simulation/elements/INWR.cpp
        simulation/elements/IRON.cpp
        simulation/elements/ISOZ.cpp
        simulation/elements/ISZS.cpp
        simulation/elements/LAVA.cpp
        simulation/elements/LCRY.cpp
        simulation/elements/LIFE.cpp
        simulation/elements/LIGH.cpp
        simulation/elements/LNTG.cpp
        simulation/elements/LO2.cpp
        simulation/elements/LOLZ.cpp
        simulation/elements/LOVE.cpp
        simulation/elements/LRBD.cpp
        simulation/elements/LSNS.cpp
        simulation/elements/MERC.cpp
        simulation/elements/METL.cpp
        simulation/elements/MORT.cpp
        simulation/elements/MWAX.cpp
        simulation/elements/NBHL.cpp
        simulation/elements/NBLE.cpp
        simulation/elements/NEUT.cpp
        simulation/elements/NICE.cpp
        simulation/elements/NITR.cpp
        simulation/elements/NONE.cpp
        simulation/elements/NSCN.cpp
        simulation/elements/NTCT.cpp
        simulation/elements/NWHL.cpp
        simulation/elements/O2.cpp
        simulation/elements/OIL.cpp
        simulation/elements/PBCN.cpp
        simulation/elements/PCLN.cpp
        simulation/elements/PHOT.cpp
        simulation/elements/PIPE.cpp
        simulation/elements/PLEX.cpp
        simulation/elements/PLNT.cpp
        simulation/elements/PLSM.cpp
        simulation/elements/PLUT.cpp
        simulation/elements/POLO.cpp
        simulation/elements/PPIP.cpp
        simulation/elements/PQRT.cpp
        simulation/elements/PROT.cpp
        simulation/elements/PRTI.cpp
        simulation/elements/PRTO.cpp
        simulation/elements/PSCN.cpp
        simulation/elements/PSNS.cpp
        simulation/elements/PSTE.cpp
        simulation/elements/PSTN.cpp
        simulation/elements/PSTS.cpp
        simulation/elements/PTCT.cpp
        simulation/elements/PUMP.cpp
        simulation/elements/PVOD.cpp
        simulation/elements/QRTZ.cpp
        simulation/elements/RBDM.cpp
        simulation/elements/RFGL.cpp
        simulation/elements/RFRG.cpp
        simulation/elements/RIME.cpp
        simulation/elements/RPEL.cpp
        simulation/elements/SALT.cpp
        simulation/elements/SAND.cpp
        simulation/elements/SAWD.cpp
        simulation/elements/SHLD1.cpp
        simulation/elements/SHLD2.cpp
        simulation/elements/SHLD3.cpp
        simulation/elements/SHLD4.cpp
        simulation/elements/SING.cpp
        simulation/elements/SLTW.cpp
        simulation/elements/SMKE.cpp
        simulation/elements/SNOW.cpp
        simulation/elements/SOAP.cpp
        simulation/elements/SPAWN.cpp
        simulation/elements/SPAWN2.cpp
        simulation/elements/SPNG.cpp
        simulation/elements/SPRK.cpp
        simulation/elements/STKM.cpp
        simulation/elements/STKM2.cpp
        simulation/elements/STNE.cpp
        simulation/elements/STOR.cpp
        simulation/elements/SWCH.cpp
        simulation/elements/TESC.cpp
        simulation/elements/THDR.cpp
        simulation/elements/THRM.cpp
        simulation/elements/TRON.cpp
        simulation/elements/TSNS.cpp
        simulation/elements/TTAN.cpp
        simulation/elements/TUNG.cpp
        simulation/elements/URAN.cpp
        simulation/elements/VIBR.cpp
        simulation/elements/VINE.cpp
        simulation/elements/VIRS.cpp
        simulation/elements/VOID.cpp
        simulation/elements/VRSG.cpp
        simulation/elements/VRSS.cpp
        simulation/elements/WARP.cpp
        simulation/elements/WATR.cpp
        simulation/elements/WAX.cpp
        simulation/elements/WHOL.cpp
        simulation/elements/WIFI.cpp
        simulation/elements/WIRE.cpp
        simulation/elements/WOOD.cpp
        simulation/elements/WTRV.cpp
        simulation/elements/YEST.cpp
        simulation/Elements.h
        simulation/GOLMenu.h
        simulation/Gravity.cpp
        simulation/Gravity.h
        simulation/MenuSection.h
        simulation/Particle.cpp
        simulation/Particle.h
        simulation/Sample.h
        simulation/SaveRenderer.cpp
        simulation/SaveRenderer.h
        simulation/Sign.cpp
        simulation/Sign.h
        simulation/simtools/AirTool.cpp
        simulation/simtools/Cool.cpp
        simulation/simtools/Cyclone.cpp
        simulation/simtools/Heat.cpp
        simulation/simtools/Mix.cpp
        simulation/simtools/NGrv.cpp
        simulation/simtools/PGrv.cpp
        simulation/simtools/SimTool.cpp
        simulation/simtools/SimTool.h
        simulation/simtools/Vac.cpp
        simulation/Simulation.cpp
        simulation/Simulation.h
        simulation/SimulationData.cpp
        simulation/SimulationData.h
        simulation/Snapshot.h
        simulation/Stickman.h
        simulation/StorageClasses.h
        simulation/StructProperty.h
        simulation/WallType.h

        tasks/Task.cpp
        tasks/Task.h
        tasks/TaskListener.h
        tasks/TaskWindow.cpp
        tasks/TaskWindow.h

        Activity.h
        Config.h
        Controller.h
        Format.cpp
        Format.h
        Misc.cpp
        Misc.h
        Platform.cpp
        Platform.h
        PowderToy.h
        PowderToyRenderer.cpp
        PowderToySDL.cpp
        PowderToyLibRetro.cpp
        Probability.cpp
        Probability.h

        Environment.cpp
        Environment.h

        # Dynamically generated - TODO: Fix this
        ElementClasses.cpp
        ElementClasses.h
        ToolClasses.cpp
        ToolClasses.h
        )

create_target_directory_groups(thepowdertoy_libretro)

target_link_libraries(thepowdertoy_libretro PRIVATE bson libretro data generic lua zlibstatic bzip2 ${PLATFORM_LIBRARIES})

if (LIBRETRO_STATIC)
      set_target_properties(thepowdertoy_libretro PROPERTIES SUFFIX "_partial.a")
      add_custom_command(TARGET thepowdertoy_libretro
               POST_BUILD
                   COMMAND ${CMAKE_SOURCE_DIR}/src/merge_static.sh $(AR) ${CMAKE_BINARY_DIR}/src/thepowdertoy_libretro${LIBRETRO_SUFFIX}.a ${CMAKE_BINARY_DIR}/src/thepowdertoy_libretro_partial.a ${CMAKE_BINARY_DIR}/externals/bson/libbson.a ${CMAKE_BINARY_DIR}/externals/lua/liblua.a ${CMAKE_BINARY_DIR}/externals/zlib/libzlibstatic.a ${CMAKE_BINARY_DIR}/externals/bzip2/libbzip2.a)
endif()

if (MSVC)
    target_link_libraries(thepowdertoy_libretro PRIVATE pthreadsVC2 msvc-generic)
endif()

if(IOS)
	set_target_properties(thepowdertoy_libretro PROPERTIES SUFFIX "_ios.dylib")
endif()

set_target_properties(thepowdertoy_libretro PROPERTIES PREFIX "")

if(CMAKE_SYSTEM_NAME MATCHES "^(Android)$")
    # LibRetro expects Android artifacts to end with '_android'
    set_target_properties(thepowdertoy_libretro PROPERTIES SUFFIX "_android.so")
endif()
